// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.alike suffix in a list 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Todo\`, true, false, false, ["todo"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].state.elems);
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["elem"] = k_block1[i1];
      const key1 = ctx['elem'].id;
      const skey1 = keyOf(key1);
      c_block1[i1] = withKey(comp1({todo: ctx['elem'],toggle: ()=>ctx['this'].toggle(ctx['elem'].id)}, key + \`__1__\${skey1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`.alike suffix in a list 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, safeOutput } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].props.toggle, ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click"><block-child-0/><block-child-1/></button>\`);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    let hdlr1 = [hdlr_fn1, ctx];
    b2 = safeOutput(ctx['this'].props.todo.id, key, "__1");
    if (ctx['this'].props.todo.isChecked) {
      b3 = text(\`V\`);
    }
    return block1([hdlr1], [b2, b3]);
  }
}"
`;

exports[`.alike suffix in a simple case 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.counter, key, "__1");
    const b3 = comp1({fn: ()=>1}, key + \`__2\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`.alike suffix in a simple case 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.fn(), key, "__1");
  }
}"
`;

exports[`.signal suffix accepts a signal-typed prop without validation error 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, [], ["count"]);
  
  return function template(ctx, node, key = "") {
    const props1 = {count: ctx['this'].state.val};
    return comp1(props1, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`.signal suffix accepts a signal-typed prop without validation error 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.count(), key, "__1");
  }
}"
`;

exports[`.signal suffix promotes a plain value to a signal 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, [], ["count"]);
  
  return function template(ctx, node, key = "") {
    const props1 = {count: ctx['this'].state.val};
    return comp1(props1, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`.signal suffix promotes a plain value to a signal 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.count(), key, "__1");
  }
}"
`;

exports[`.signal suffix works in a t-foreach loop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Item\`, true, false, false, [], ["value"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].state.items);
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block1[i1];
      const key1 = ctx['item'].id;
      const skey1 = keyOf(key1);
      c_block1[i1] = withKey(comp1({value: ctx['item'].n}, key + \`__1__\${skey1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`.signal suffix works in a t-foreach loop 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value(), key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`.signal suffix: child re-reads updated value when parent state changes 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, [], ["count"]);
  
  return function template(ctx, node, key = "") {
    return comp1({count: ctx['this'].state.val}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`.signal suffix: child re-reads updated value when parent state changes 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.count(), key, "__1");
  }
}"
`;

exports[`.signal suffix: child receives a read-only reactive value 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, [], ["count"]);
  
  return function template(ctx, node, key = "") {
    return comp1({count: ctx['this'].state.val}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`.signal suffix: child receives a read-only reactive value 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.count(), key, "__1");
  }
}"
`;

exports[`.signal suffix: effects in child react to parent value changes 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, [], ["count"]);
  
  return function template(ctx, node, key = "") {
    return comp1({count: ctx['this'].state.val}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`.signal suffix: effects in child react to parent value changes 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.count(), key, "__1");
  }
}"
`;

exports[`.signal suffix: one signal per child > a .signal in a template and one in a template it calls 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent, zero, callTemplate } = helpers;
  const comp1 = createComponent(app, \`Leaf\`, true, false, false, [], ["v"]);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({v: 'main'}, key + \`__1\`, node, this, null);
    const b3 = callTemplate(\`sub\`, this, app, Object.assign(Object.create(ctx), {[zero]: null}), node, key + \`__2\`);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`.signal suffix: one signal per child > a .signal in a template and one in a template it calls 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<b><block-child-0/></b>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.v(), key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`.signal suffix: one signal per child > a .signal in a template and one in a template it calls 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Leaf\`, true, false, false, [], ["v"]);
  
  return function template(ctx, node, key = "") {
    return comp1({v: 'sub'}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`.signal suffix: one signal per child > a .signal in slot content and one in the slot host's template 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent, markRaw } = helpers;
  const comp1 = createComponent(app, \`Leaf\`, true, false, false, [], ["v"]);
  const comp2 = createComponent(app, \`Child\`, true, true, false, []);
  
  function slot1(ctx, node, key = "") {
    return comp1({v: 'slot'}, key + \`__1\`, node, this, null);
  }
  
  return function template(ctx, node, key = "") {
    return comp2({slots: markRaw({"default": {__render: slot1.bind(this), __ctx: ctx}})}, key + \`__2\`, node, this, null);
  }
}"
`;

exports[`.signal suffix: one signal per child > a .signal in slot content and one in the slot host's template 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent, callSlot } = helpers;
  const comp1 = createComponent(app, \`Leaf\`, true, false, false, [], ["v"]);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({v: 'child'}, key + \`__1\`, node, this, null);
    const b3 = callSlot(ctx, node, key, "default", false, {});
    return block1([], [b2, b3]);
  }
}"
`;

exports[`.signal suffix: one signal per child > a .signal in slot content and one in the slot host's template 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<b><block-child-0/></b>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.v(), key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`.signal suffix: one signal per child > a removed child takes its signal with it 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Item\`, true, false, false, [], ["v"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].state.items);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["i"] = k_block2[i1];
      const key1 = ctx['i'];
      const skey1 = keyOf(key1);
      c_block2[i1] = withKey(comp1({v: ctx['i']}, key + \`__1__\${skey1}\`, node, this, null), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`.signal suffix: one signal per child > a removed child takes its signal with it 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<b><block-child-0/></b>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.v(), key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`.signal suffix: one signal per child > a template with a .signal called twice 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate(\`sub\`, this, app, Object.assign(Object.create(ctx), {x: ctx['this'].state.a, [zero]: null}), node, key + \`__1\`);
    const b3 = callTemplate(\`sub\`, this, app, Object.assign(Object.create(ctx), {x: ctx['this'].state.b, [zero]: null}), node, key + \`__2\`);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`.signal suffix: one signal per child > a template with a .signal called twice 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Leaf\`, true, false, false, [], ["v"]);
  
  return function template(ctx, node, key = "") {
    return comp1({v: ctx['x']}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`.signal suffix: one signal per child > a template with a .signal called twice 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<b><block-child-0/></b>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.v(), key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`.signal suffix: signal reference is stable across updates 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["tick"], ["count"]);
  
  return function template(ctx, node, key = "") {
    return comp1({count: ctx['this'].state.val,tick: ctx['this'].state.tick}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`.signal suffix: signal reference is stable across updates 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.count(), key, "__1");
    const b3 = safeOutput(ctx['this'].props.tick, key, "__2");
    return multi([b2, b3]);
  }
}"
`;

exports[`.translate props are translated 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({message: \`translated message\`}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`.translate props are translated 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.message, key, "__1");
  }
}"
`;

exports[`a props view is read-only, declared keys and new ones alike 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["a"]);
  
  return function template(ctx, node, key = "") {
    return comp1({a: 1}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`a props view is read-only, declared keys and new ones alike 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`a schema-less view resolves the defaults the component declared 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["width"]);
  
  return function template(ctx, node, key = "") {
    return comp1({width: ctx['this'].width()}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`a schema-less view resolves the defaults the component declared 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.width, key, "__1");
  }
}"
`;

exports[`an expression choosing between arrow functions is re-evaluated as a prop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["cb"]);
  const comp2 = createComponent(app, \`Child\`, true, false, false, ["cb"]);
  const comp3 = createComponent(app, \`Child\`, true, false, false, ["cb.name"]);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    const b2 = comp1({cb: ctx['this'].state.flag?()=>'A':()=>'B'}, key + \`__1\`, node, this, null);
    ctx["n"] = ctx['this'].state.n;
    const b3 = comp2({cb: ctx['n']>1?()=>'big':()=>'small'}, key + \`__2\`, node, this, null);
    ctx["name"] = ctx['this'].state.name;
    const b4 = comp3({cb: ()=>\`hi \${ctx['name']}\`,"cb.name": ctx['name']}, key + \`__3\`, node, this, null);
    return multi([b2, b3, b4]);
  }
}"
`;

exports[`an expression choosing between arrow functions is re-evaluated as a prop 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.cb(), key, "__1");
  }
}"
`;

exports[`arrow function props auto-skip re-render when captured variables don't change 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.counter, key, "__1");
    const b3 = comp1({fn: ()=>1}, key + \`__2\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`arrow function props auto-skip re-render when captured variables don't change 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.fn(), key, "__1");
  }
}"
`;

exports[`arrow function props re-render when captured variable changes 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Todo\`, true, false, false, ["todo","toggle.elem"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].state.elems);
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["elem"] = k_block1[i1];
      const key1 = ctx['elem'].id;
      const skey1 = keyOf(key1);
      c_block1[i1] = withKey(comp1({todo: ctx['elem'],toggle: ()=>ctx['this'].toggle(ctx['elem'].id),"toggle.elem": ctx['elem']}, key + \`__1__\${skey1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`arrow function props re-render when captured variable changes 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, safeOutput } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].props.toggle, ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click"><block-child-0/><block-child-1/></button>\`);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    let hdlr1 = [hdlr_fn1, ctx];
    b2 = safeOutput(ctx['this'].props.todo.id, key, "__1");
    if (ctx['this'].props.todo.isChecked) {
      b3 = text(\`V\`);
    }
    return block1([hdlr1], [b2, b3]);
  }
}"
`;

exports[`basics > accept ES6-like syntax for props (with getters) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["greetings"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({greetings: ctx['this'].greetings}, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > accept ES6-like syntax for props (with getters) 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.greetings, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`basics > arrow function props do not leak synthetic keys into props() 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["onClick.item"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].items);
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block1[i1];
      const key1 = ctx['item'].val;
      const skey1 = keyOf(key1);
      c_block1[i1] = withKey(comp1({onClick: (_ev)=>ctx['this'].onClick(ctx['item'].val,_ev),"onClick.item": ctx['item']}, key + \`__1__\${skey1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`basics > arrow function props do not leak synthetic keys into props() 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.onClick, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`basics > arrow functions as prop correctly capture their scope 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["onClick.item"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].items);
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block1[i1];
      const key1 = ctx['item'].val;
      const skey1 = keyOf(key1);
      c_block1[i1] = withKey(comp1({onClick: (_ev)=>ctx['this'].onClick(ctx['item'].val,_ev),"onClick.item": ctx['item']}, key + \`__1__\${skey1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`basics > arrow functions as prop correctly capture their scope 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].props.onClick, ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click"/>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`basics > explicit object prop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["value"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({value: ctx['this'].state.val}, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > explicit object prop 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.someval, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`basics > prop names can contain - 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["prop-name"]);
  
  return function template(ctx, node, key = "") {
    return comp1({'prop-name': 7}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`basics > prop names can contain - 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props['prop-name'], key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`basics > support prop names that aren't valid bare object property names 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["some-dashed-prop"]);
  
  return function template(ctx, node, key = "") {
    return comp1({'some-dashed-prop': 5}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`basics > support prop names that aren't valid bare object property names 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].props.onClick, ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click"/>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`basics > t-set with a body expression can be passed in props, and then t-out 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block2 = createBlock(\`<p>43</p>\`);
  
  function value1(ctx, node, key = "") {
    return block2();
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["abc"] = new LazyValue(value1, ctx, this, node, key);
    const b3 = comp1({val: ctx['abc']}, key + \`__1\`, node, this, null);
    return block1([], [b3]);
  }
}"
`;

exports[`basics > t-set with a body expression can be passed in props, and then t-out 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`basics > t-set with a body expression can be used as textual prop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["abc"] = \`42\`;
    const b2 = comp1({val: ctx['abc']}, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > t-set with a body expression can be used as textual prop 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`basics > t-set works  1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["val"] = 42;
    const b2 = comp1({val: ctx['val']}, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > t-set works  2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`basics > template string in prop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["propName"]);
  
  return function template(ctx, node, key = "") {
    return comp1({propName: \`1\${ctx['this'].someVal}3\`}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`basics > template string in prop 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`\`);
  }
}"
`;

exports[`bound functions are considered 'alike' 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.val, key, "__1");
    const b3 = comp1({fn: (ctx['this'].someFunction).bind(this)}, key + \`__2\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`bound functions are considered 'alike' 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`child\`);
  }
}"
`;

exports[`bound functions is not referentially equal after update 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  return function template(ctx, node, key = "") {
    return comp1({val: ctx['this'].state.val,fn: (ctx['this'].someFunction).bind(this)}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`bound functions is not referentially equal after update 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.val, key, "__1");
  }
}"
`;

exports[`can bind function prop with bind suffix 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({doSomething: (ctx['this'].doSomething).bind(this)}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`can bind function prop with bind suffix 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`child\`);
  }
}"
`;

exports[`can use .translate suffix 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({message: \`some message\`}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`can use .translate suffix 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.message, key, "__1");
  }
}"
`;

exports[`default props don't cause spurious updates with t-props 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, safeOutput, createComponent } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].increment, ctx, ev);
  const comp1 = createComponent(app, \`Child\`, true, false, true, []);
  
  let block2 = createBlock(\`<div block-handler-0="click">tick: <block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    const b3 = safeOutput(ctx['this'].v(), key, "__1");
    const b2 = block2([hdlr1], [b3]);
    const b4 = comp1(Object.assign({}, ctx['this'].makeProps()), key + \`__2\`, node, this, null);
    return multi([b2, b4]);
  }
}"
`;

exports[`default props don't cause spurious updates with t-props 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.b, key, "__1");
  }
}"
`;

exports[`do not crash when binding anonymous function prop with bind suffix 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({doSomething: ((_val)=>ctx['this'].doSomething(_val)).bind(this)}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`do not crash when binding anonymous function prop with bind suffix 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`child\`);
  }
}"
`;

exports[`every view of a component resolves the defaults the component declared 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`every view of a component resolves the defaults the component declared 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`reactive props (issue #1908) > a prop read only in an effect (not the template) still reacts to a value swap 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Test\`, true, false, false, ["o"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({o: ctx['this'].obj()}, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`reactive props (issue #1908) > a prop read only in an effect (not the template) still reacts to a value swap 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>hi</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`reactive props (issue #1908) > effect observing a prop reacts to both in-place mutation and value swap 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Test\`, true, false, false, ["o"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({o: ctx['this'].obj()}, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`reactive props (issue #1908) > effect observing a prop reacts to both in-place mutation and value swap 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.o.val, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`reactive props (issue #1908) > making props reactive does not introduce extra renders 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Test\`, true, false, false, ["o"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({o: ctx['this'].obj()}, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`reactive props (issue #1908) > making props reactive does not introduce extra renders 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].tick(), key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`reactive props (issue #1908) > props() tracks new and deleted keys from t-props 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, true, []);
  
  return function template(ctx, node, key = "") {
    return comp1(Object.assign({}, ctx['this'].childProps()), key + \`__1\`, node, this, null);
  }
}"
`;

exports[`reactive props (issue #1908) > props() tracks new and deleted keys from t-props 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].label(), key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`reactive props (issue #1908) > this.props still reflects the old value inside onWillUpdateProps 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    return comp1({value: ctx['this'].state.value}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`reactive props (issue #1908) > this.props still reflects the old value inside onWillUpdateProps 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`schema defaults and signal-driven props 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["height","width"]);
  
  return function template(ctx, node, key = "") {
    return comp1({height: ctx['this'].height(),width: ctx['this'].width()}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`schema defaults and signal-driven props 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.width, key, "__1");
    const b3 = text(\` / \`);
    const b4 = safeOutput(ctx['this'].props.height, key, "__2");
    return multi([b2, b3, b4]);
  }
}"
`;

exports[`schema-less view key set > a computed over a key read before it existed sees it appear 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, true, []);
  
  return function template(ctx, node, key = "") {
    return comp1(Object.assign({}, ctx['this'].p()), key + \`__1\`, node, this, null);
  }
}"
`;

exports[`schema-less view key set > a computed over a key read before it existed sees it appear 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].c(), key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`schema-less view key set > a computed over a key that disappears sees undefined 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, true, []);
  
  return function template(ctx, node, key = "") {
    return comp1(Object.assign({}, ctx['this'].p()), key + \`__1\`, node, this, null);
  }
}"
`;

exports[`schema-less view key set > a computed over a key that disappears sees undefined 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].c(), key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`schema-less view key set > a computed over the key list follows keys added and removed 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, true, []);
  
  return function template(ctx, node, key = "") {
    return comp1(Object.assign({}, ctx['this'].p()), key + \`__1\`, node, this, null);
  }
}"
`;

exports[`schema-less view key set > a computed over the key list follows keys added and removed 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].c(), key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`schema-less view key set > a view created before the schema view resolves its defaults 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.w, key, "__1");
    return block1([], [b2]);
  }
}"
`;
